bug 优化